--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "gulpfile.js",
   "scripts": {
+    "start": "./node_modules/.bin/gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,11 +18,16 @@
   },
   "homepage": "https://github.com/arciisine/TetrisTutorial#readme",
   "devDependencies": {
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-connect": "^5.0.0",
     "gulp-sass": "^3.1.0",
     "gulp-typescript": "^3.2.1",
     "gulp-watch": "^4.3.11",
-    "typescript": "^2.4.1"
+    "typescript": "^2.4.1",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "systemjs": "^0.20.15"
   }
 }
